12 Aug 2011: Wouter
	- persistant SSL connections to the server.

11 Aug 2011: Wouter
	- detection probes code.

10 Aug 2011: Wouter
	- working osx script, netconfig script and networkmanager script.

9 Aug 2011: Wouter
	- daemon code.

8 Aug 2011: Wouter
	- import of mismash of files from Unbound (BSD licensed).