@@ -1,3 +1,10 @@
+15 Aug 2011: Wouter
+	- log with time in readable format (to logfile), detects strftime.
+	- removed debug printouts.
+	- menu is positioned neatly under the statusicon.
+	- result window has icon set and a title.
+	- fix unref for result_window by reffing it in the init function.
+
 12 Aug 2011: Wouter
 	- persistant SSL connections to the server.
 
